fixed spacing on the top

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -447,7 +447,7 @@ h3 a:hover{
   margin-right:0px;
 }
 .cover2020{
-  margin-top: 80px;
+  margin-top: 50px;
   margin-bottom: 140px;
 }
 .cover2020 h1{
